# PlutoSploit

./: CMakeLists.txt  README.md  main.cpp
Bytecode/InitScript/: Bytecode.h
Bytecode/RBXBytecode/: RBXBytecode.cpp  RBXBytecode.hpp
Robloz/DataModel/: RBXDataModel.cpp  RBXDataModel.hpp
Robloz/Instance/: RBXInstance.cpp  RBXInstance.hpp
memory/: memory.cpp  memory.hpp
